<resources>
    <string name="app_name">Booking</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="password" translatable="false">Password</string>
    <string name="email_phone_hint" translatable="false">Email or Mobile Number</string>
    <string name="name" translatable="false">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="phone_number" translatable="false">Phone Number</string>
    <string name="book" translatable="false">Book</string>
    <string name="my_trips" translatable="false">My Trips</string>
    <string name="parcel" translatable="false">Parcel</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="upcoming_trip">Upcoming</string>
    <string name="completed_trips">Completed</string>
    <string name="cancelled_trips">Cancelled</string>
    <string name="one_way">One Way</string>
    <string name="returns">Returns</string>
    <string name="turn_around_icon">Turn around</string>
    <string name="turn_around">Turn around</string>
    <string name="select_destinationation">Select Destinationation</string>
    <string name="from">From</string>
    <string name="select_departure">Select Departure</string>
    <string name="to">To</string>
    <string name="select_destination">Select Destination</string>
    <string name="search">Search</string>
    <string name="let_s_start_your_journey">Let\'s Start your journey</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="select_the_number_of_passengers">Select the number of passengers</string>
    <string name="passengers">Passengers</string>
    <string name="confirm">Confirm</string>
    <string name="bus">Bus</string>
    <string name="departure">Departure</string>
    <string name="departure_date">Departure Date</string>
    <string name="_1_passenger">1 Passenger</string>
    <string name="return_date">Return Date</string>
    <string name="number_of_children">Number of Children</string>
    <string name="children">Children</string>
    <string name="shuttle">Shuttle</string>
    <string name="what_do_you_want_to_use">What do you want to use?</string>
    <string name="mean_of_travel">Mean of Travel</string>
    <string name="departure_from">Departure From</string>
    <string name="station">Station</string>
    <string name="header">Transform your journey into an entertaining retreat</string>
    <string name="sub_title">Experience the convenience and simplicity of booking bus travels SafariApp.</string>
    <string name="create_your_account">Create your account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_your_account_to_continue">Login to your account to continue</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="type_of_ticket">Type of Ticket</string>
    <string name="tyepe_of_bus">Tyepe of bus</string>
    <string name="onward_trip">Onward Trip</string>
    <string name="departure_time">Departure Time</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="departure_place">Departure Place</string>
    <string name="duration">Duration</string>
    <string name="arrival_place">Arrival Place</string>
    <string name="return_departure">Return Departure</string>
    <string name="return_depa_place">Return Depa Place</string>
    <string name="return_arrival_time">Return arrival time</string>
    <string name="arrival_return_time">Arrival Return Time</string>
    <string name="share_app">Share App</string>
    <string name="settings">Settings</string>
    <string name="manage_payment_mathods">Manage Payment Mathods</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="customer_service">Customer Service</string>
    <string name="forgot_password_header">Enter your Email or Number to reset your Password</string>
    <string name="date_one">Date One</string>
    <string name="date_two">Date Two</string>
    <string name="skip">Skip</string>
    <string name="onboarding">onboarding</string>
    <string name="get_started">Get Started</string>
    <string name="finish">Finish</string>
    <string name="multi_city">Multi-City</string>
</resources>